Fix vertical alignment in assets table view rows.

--- a/src/OrchardCore.Modules/OrchardCore.Media/wwwroot/Styles/media.css
+++ b/src/OrchardCore.Modules/OrchardCore.Media/wwwroot/Styles/media.css
@@ -255,7 +255,7 @@ ol.media-items-grid {
   .media-items-table td {
     vertical-align: middle; }
   [dir] .media-items-table .text-col {
-    margin-top: -15px; }
+    margin-top: 16px; }
   [dir] .media-items-table tr:hover {
     cursor: pointer; }
   .media-items-table .media-name-cell {
